# protest

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  PRE_V0.md  README.md  doc-examples.yml  future_usage.py  justfile  log_conf.yaml  main.py  mkdocs.yml  pyproject.toml  release-please-config.json  run_examples.sh  template_idea.html
.claude/: CLAUDE.md  DECISIONS.md  next-documentation.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml
benchmarks/: ctrf_memory.py
docs/: best-practices.md  cli.md  evals.md  faq.md  index.md
docs/architecture/: fixture-scoping-design.md
docs/core-concepts/: builtins.md  console.md  dependency-injection.md  factories.md  fixtures.md  parameterized-tests.md  reporters.md  sessions-and-suites.md  tags.md  tests.md
docs/getting-started/: installation.md  quickstart.md  running-tests.md
docs/guides/: project-organization.md  pytest-to-protest.md  testing-fastapi.md
docs/internals/: architecture.md  dependency-injection.md  event-bus.md  events.md  filters.md  plugins.md
docs/stylesheets/: extra.css
examples/: demo.py  demo_async.py  filtering_demo.py  new_api_proposal.py  parallel_demo.py  run_async_demo.py  tags_demo.py
examples/basic/: README.md  caplog_demo.py  demo.py  demo_async.py  demo_capture.py  factory_demo.py  factory_with_db_demo.py  live_demo.py  mocker_demo.py  nested_suites.py  parallel_demo.py  parameterized_factory_demo.py  parametrize_demo.py  pyproject.toml  reporter_demo.py  run_async_demo.py  skip_demo.py  slack_notifier.py  spinner_demo.py  timeout_demo.py  wait_demo.py  xfail_demo.py
examples/builtins/: session.py
examples/fastapi_demo/: README.md  app.py  pyproject.toml  tests.py
examples/minimal/: session.py
examples/sqlalchemy_demo/: demo.py  demo_factory_class.py  pyproject.toml
examples/subprocess_capture/: session.py
examples/yorkshire/: domain.py  fixtures.py  kennel.py  services.py  session.py
examples/yorkshire/app/: chatbot.py  domain.py  (+4 more)
protest/: __init__.py  __main__.py  api.py  assertions.py  compat.py  console.py  exceptions.py  loader.py  plugin.py  shell.py  steps.py  utils.py
protest/cache/: __init__.py  plugin.py  storage.py
protest/cli/: history.py  main.py
protest/core/: collector.py  fixture.py  outcome.py  runner.py  scope.py  session.py  suite.py  tracker.py
protest/di/: container.py  decorators.py  factory.py  hashable.py  hints.py  markers.py  proxy.py  resolver.py  suite_resolver.py  validation.py
protest/entities/: __init__.py  core.py  events.py  execution.py  retry.py  skip.py  suite_path.py  xfail.py
protest/evals/: __init__.py  evaluator.py  evaluators.py  hashing.py  history.py  results_writer.py  session.py  suite.py  types.py  wrapper.py
protest/events/: bus.py  data.py  types.py
protest/execution/: async_bridge.py  capture.py  context.py  interrupt.py  log_capture.py
protest/filters/: __init__.py  keyword.py  kind.py  suite.py
protest/fixtures/: builtins.py  mocker.py
protest/history/: __init__.py  collector.py  plugin.py  storage.py
protest/reporting/: __init__.py  ascii.py  colors.py  console.py  ctrf.py  factory.py  format.py  live_reporter.py  log_file.py  protocol.py  rich_reporter.py  verbosity.py  web.py
protest/tags/: __init__.py  plugin.py
scripts/: generate-doc-outputs.py
src/: entities.py  session.py  use.py
src/di/: markers.py
tests/: conftest.py  test_assertions.py  test_console_print.py  test_history_changes.py  test_history_cli.py  test_history_stats.py  test_normalizers.py  test_session.py  test_session_auto.py  test_shell.py  test_steps.py
tests/api/: test_api.py  test_loader.py
tests/cache/: test_cache_plugin.py  test_storage.py
tests/cli/: conftest.py  test_error_handling.py  test_run_command.py  test_tags_command.py
tests/core/: test_collector.py  test_factory_errors.py  test_fixture_max_concurrency.py  test_parameterized_fixture_error.py  test_parametrize.py  test_plugin_wiring.py  test_retries.py  test_runner.py  test_session_suite_api.py  test_session_suite_hierarchy.py  test_skip.py  test_skipif.py  test_suite_concurrency_inheritance.py  test_timeout.py  test_unmanaged_factory.py  test_xfail.py
tests/di/: conftest.py  dependencies.py  test_container.py  test_decorators.py  test_dependencies.py  test_edge_cases.py  test_factory.py  test_hashable.py  test_pep563_annotations.py  test_proxy.py  test_resolver.py  utils.py
tests/entities/: test_suite_path.py
tests/evals/: test_duration_precision.py  test_e2e.py  test_eval_case_result.py  test_evalcase.py  test_evalcase_tags_wiring.py  test_evaluator_validation.py  test_hashing.py  test_judge.py  test_multiple_evalcase_params.py  test_no_evaluators.py  test_score_name_collision.py  test_score_stats.py
tests/events/: test_bus.py  test_bus_race_condition.py  test_data.py
tests/execution/: test_blocking.py  test_capture.py  test_context.py  test_interrupt.py  test_interrupt_blocked_threads.py  test_log_capture.py  test_real_streams.py
tests/factories/: test_items.py
tests/filters/: test_keyword_filter_plugin.py  test_suite_filter_plugin.py
tests/fixtures/: test_caplog.py  test_mocker.py  test_tmp_path.py  test_warns.py
tests/history/: test_append_entry_concurrency.py  test_history_dir_isolation.py  test_schema_version.py
tests/integration/: test_filter_combinations.py
tests/reporting/: conftest.py  ctrf.schema.json  test_ascii_reporter.py  test_ctrf.py  test_factory.py  test_live_reporter.py  test_log_file.py  test_reporter_symmetry.py  test_rich_reporter.py  test_web.py
tests/tags/: test_tag_filter_plugin.py
usage_examples/: fixtures.py  main.py
usage_exemples/: fixtures.py  main.py
web/: package-lock.json  package.json  vite.config.js
web/src/: index.html
website/: .gitignore  content.config.ts  dist  netlify.toml  nuxt.config.ts  package.json  pnpm-lock.yaml
website/app/: app.config.ts  app.vue
website/content/: index.md
website/scripts/: capture-output.py
website/transformers/: raw-text.ts
(+76 files in other folders)
