[project]
name = "protest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "typing-extensions>=4.15.0",
]


[tool.ruff]
output-format = "concise"
line-length = 88
exclude = ["examples"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "PL",     # Pylint
    "RUF",    # Ruff-specific
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "RET",    # flake8-return
    "S",      # flake8-bandit
    "ASYNC",  # flake8-async
    "TCH",    # flake8-type-checking
    "PYI",    # flake8-pyi
    "N",      # pep8-naming
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "D212",   # pydocstyle (multiline docstring)
]
ignore = [
    "E501", # Line length handled by formatter
    "S101", # Allow assert (pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004", # Magic value used in comparison
]
"protest/cli/**" = [
    "T201",    # print allowed in CLI
    "PLC0415", # lazy imports for fast --help
]
"protest/reporting/console.py" = [
    "T201", # print is the purpose of this module
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)7s] %(name)20s - %(message)s"

[project.scripts]
protest = "protest.cli.main:main"

[tool.setuptools]
packages = ["protest"]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "ty>=0.0.1a29",
]
