[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protest"
version = "0.1.0"
description = "Async-first Python testing framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Renaud Cepre"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Framework :: AsyncIO",
]
dependencies = [
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
rich = [
    "rich>=13.0",
]


[tool.ruff]
output-format = "concise"
line-length = 88
exclude = ["examples"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "PL",     # Pylint
    "RUF",    # Ruff-specific
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "RET",    # flake8-return
    "S",      # flake8-bandit
    "ASYNC",  # flake8-async
    "TCH",    # flake8-type-checking
    "PYI",    # flake8-pyi
    "N",      # pep8-naming
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "D212",   # pydocstyle (multiline docstring)
]
ignore = [
    "E501", # Line length handled by formatter
    "S101", # Allow assert (pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004", # Magic value used in comparison
    "PLR0913", # parametrized tests often need many arguments
]
"protest/cli/**" = [
    "T201",    # print allowed in CLI
    "PLC0415", # lazy imports for fast --help
    "PLR2004", # magic values for arg parsing
]
"protest/core/session.py" = [
    "PLC0415", # lazy import for optional rich dependency
    "PLR0913", # many args is deliberate API design
]
"protest/reporting/ascii.py" = [
    "T201", # print is the purpose of this module
]
"protest/reporting/factory.py" = [
    "PLC0415", # lazy imports for optional rich dependency
    "PLR0911", # many returns is decision tree pattern
]
"tests/reporting/test_factory.py" = [
    "PLC0415", # imports after patch context
    "SIM117",  # nested with for patch clarity
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)7s] %(name)20s - %(message)s"
filterwarnings = [
    "ignore:cannot collect test class 'TestItem':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestRunner':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestResult':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestCounts':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestStartInfo':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestCacheEntry':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestExecutionContext':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestPhase':pytest.PytestCollectionWarning",
]

[project.scripts]
protest = "protest.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["protest*"]

[dependency-groups]
dev = [
    "jsonschema>=4.0.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "rich>=13.0",
    "ty>=0.0.1a29",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]
